--- a/components/user-feature-mgt/org.wso2.carbon.identity.user.feature.mgt/pom.xml
+++ b/components/user-feature-mgt/org.wso2.carbon.identity.user.feature.mgt/pom.xml
@@ -53,8 +53,14 @@
                             org.apache.commons.logging; version="${import.package.version.commons.logging}",
                             org.osgi.framework; version="${osgi.framework.imp.pkg.version.range}",
                             org.osgi.service.component; version="${osgi.service.component.imp.pkg.version.range}",
-                            org.wso2.carbon.database.utils.*; version="${org.wso2.carbon.database.utils.version.range}"
+                            org.wso2.carbon.database.utils.jdbc;
+                            version="${org.wso2.carbon.database.utils.version.range}",
+                            org.wso2.carbon.database.utils.jdbc.exceptions;
+                            version="${org.wso2.carbon.database.utils.version.range}",
+                            org.wso2.carbon.identity.core.util;
+                            version="${carbon.identity.package.import.version.range}"
                         </Import-Package>
+                        <DynamicImport-Package>*</DynamicImport-Package>
                     </instructions>
                 </configuration>
             </plugin>
@@ -169,6 +175,10 @@
         <dependency>
             <groupId>org.wso2.carbon.identity.framework</groupId>
             <artifactId>org.wso2.carbon.identity.configuration.mgt.core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.wso2.carbon.identity.framework</groupId>
+            <artifactId>org.wso2.carbon.identity.core</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.felix</groupId>
