--- a/components/user-feature-mgt/org.wso2.carbon.identity.user.feature.mgt/pom.xml
+++ b/components/user-feature-mgt/org.wso2.carbon.identity.user.feature.mgt/pom.xml
@@ -58,9 +58,10 @@
                             org.wso2.carbon.database.utils.jdbc.exceptions;
                             version="${org.wso2.carbon.database.utils.version.range}",
                             org.wso2.carbon.identity.core.util;
-                            version="${carbon.identity.package.import.version.range}"
+                            version="${carbon.identity.package.import.version.range}",
+                            org.wso2.carbon.identity.configuration.mgt.core.util;
+                            version="${carbon.identity.package.import.version.range}",
                         </Import-Package>
-                        <DynamicImport-Package>*</DynamicImport-Package>
                     </instructions>
                 </configuration>
             </plugin>
