Revert "Merge pull request #1172 from wso2-support/revert-1118-feature-mgt"
This reverts commit 5902d0f6910aa3b15d72c670926d1f58ef28c2e6, reversing
changes made to 78138dd41ade39bada585d130f89c243dfbf7ad5.

--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
         <module>components/template-mgt</module>
         <module>components/configuration-mgt</module>
         <module>components/captcha-mgt</module>
+        <module>components/user-functionality-mgt</module>
         <module>features/security-mgt</module>
         <module>features/claim-mgt</module>
         <module>features/identity-core</module>
@@ -1312,6 +1313,11 @@
             <dependency>
                 <groupId>org.wso2.carbon.identity.framework</groupId>
                 <artifactId>org.wso2.carbon.identity.application.default.auth.sequence.mgt.stub</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.wso2.carbon.identity.framework</groupId>
+                <artifactId>org.wso2.carbon.identity.user.functionality.mgt</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
